[tool.poetry]
name = "waveplus-exporter"
version = "0.1.0"
description = "Prometheus exporter for waveplus environment sensor"
authors = ["Jana-Marie <janamarie@janamarie.dev>"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
waveplus-exporter = "waveplus_exporter:run"

[tool.poetry.dependencies]
python = "^3.8"
bluepy = "^1.3.0"
prometheus-client = "^0.15.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
